# web-page-layout

./: LICENSE  main.py  pyproject.toml
html/: catalog.html  category.html  contact.html  main.html
src/: config.py
